--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,10 @@ should not change, as modifications made to the environment are either
 new features or backward compatible bug fixes. We will maintain vX branches
 pointing at the most recent vX.Y.
 
+v2.0.6
+- Small fixes to getState/setState.
+- Memory usage reduction when saving replay videos is enabled. 
+
 v2.0.5
 - Support compilation on OSX.
 
